err/bookreader.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bookreader'...
Compiling './lib/python3.5/site-packages/bookreader/fields.py'...
***   File "./lib/python3.5/site-packages/bookreader/fields.py", line 49
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bookreader/fixtures'...
Listing './lib/python3.5/site-packages/bookreader/fixtures/tests'...
Listing './lib/python3.5/site-packages/bookreader/fixtures/tests/harvesting'...
Listing './lib/python3.5/site-packages/bookreader/harvesting'...
Compiling './lib/python3.5/site-packages/bookreader/harvesting/book.py'...
***   File "./lib/python3.5/site-packages/bookreader/harvesting/book.py", line 213
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bookreader/migrations'...
Compiling './lib/python3.5/site-packages/bookreader/models.py'...
***   File "./lib/python3.5/site-packages/bookreader/models.py", line 80
    except ValidationError, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bookreader/signals'...
Listing './lib/python3.5/site-packages/bookreader/templatetags'...
Compiling './lib/python3.5/site-packages/bookreader/templatetags/bookreader_compare.py'...
***   File "./lib/python3.5/site-packages/bookreader/templatetags/bookreader_compare.py", line 26
    raise template.TemplateSyntaxError, '%s tag requires a book identifier or object as an argument' % token[0]
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bookreader/templatetags/bookreader_djatoka.py'...
***   File "./lib/python3.5/site-packages/bookreader/templatetags/bookreader_djatoka.py", line 12
    raise template.TemplateSyntaxError, '%s tag requires a resource url to be the first argument' % token[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bookreader/tests'...
Listing './lib/python3.5/site-packages/bookreader/tests/bitstream'...
Listing './lib/python3.5/site-packages/bookreader/tests/bitstream/canonical'...
Listing './lib/python3.5/site-packages/bookreader/tests/bitstream/extant'...
Listing './lib/python3.5/site-packages/bookreader/tests/bitstream/frankenbook'...
Listing './lib/python3.5/site-packages/bookreader/tests/bitstream/work'...
Listing './lib/python3.5/site-packages/bookreader/tests/harvesting'...
Compiling './lib/python3.5/site-packages/bookreader/tests/harvesting/book.py'...
***   File "./lib/python3.5/site-packages/bookreader/tests/harvesting/book.py", line 97
    'issued': datetime(2010,7,12,17,04,42)}
                                     ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/bookreader/tests/oai'...
Listing './lib/python3.5/site-packages/bookreader/views'...
Compiling './lib/python3.5/site-packages/bookreader/views/book.py'...
***   File "./lib/python3.5/site-packages/bookreader/views/book.py", line 22
    print "this is in browse"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bookreader/views/pdf.py'...
***   File "./lib/python3.5/site-packages/bookreader/views/pdf.py", line 86
    print 'adding annotation: %s at level %d' % (str(annotation),level,)
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bookreader-1.0.egg-info'...
Listing './lib/python3.5/site-packages/dspace'...
Compiling './lib/python3.5/site-packages/dspace/metadata.py'...
***   File "./lib/python3.5/site-packages/dspace/metadata.py", line 49
    raise Error, "Unknown field type: %s" % field_type
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dspace/sword'...
Compiling './lib/python3.5/site-packages/dspace/sword/service.py'...
***   File "./lib/python3.5/site-packages/dspace/sword/service.py", line 100
    print resp.status
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dspace/tests'...
Listing './lib/python3.5/site-packages/dspace/tests/repository'...
Listing './lib/python3.5/site-packages/dspace-2.0.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/oaipmh'...
Listing './lib/python3.5/site-packages/oaipmh/tests'...
Compiling './lib/python3.5/site-packages/oaipmh/tests/createbrokendata.py'...
***   File "./lib/python3.5/site-packages/oaipmh/tests/createbrokendata.py", line 23
    print "Identify"
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/oaipmh/tests/createdata.py'...
***   File "./lib/python3.5/site-packages/oaipmh/tests/createdata.py", line 8
    print "GetRecord"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/oaipmh/tests/createdata_deleted_records.py'...
***   File "./lib/python3.5/site-packages/oaipmh/tests/createdata_deleted_records.py", line 9
    print "GetRecord"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyoai-2.5.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
